--- a/project/TPES/src/app/base/components/elements/navbar/navbar.component.css
+++ b/project/TPES/src/app/base/components/elements/navbar/navbar.component.css
@@ -2,3 +2,10 @@
   display: flex;
   flex: 1;
 }
+
+mat-toolbar.navbar {
+  width: 100%;
+  margin-top: 0;
+  margin-left: 0;
+  margin-right: 0;
+}
