--- a/project/TPES/src/styles.css
+++ b/project/TPES/src/styles.css
@@ -1,3 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import "styles/bootstrap-grid.min.css";
+
+body {
+  margin: 0;
+}
