--- a/project/TPES/src/app/lessons/components/pages/lesson-detail/lesson-detail.component.html
+++ b/project/TPES/src/app/lessons/components/pages/lesson-detail/lesson-detail.component.html
@@ -15,23 +15,41 @@
   <div class="col-12">
     <mat-list>
       <ng-container *ngIf="type==='javascript'">
-        <mat-list-item *ngFor="let item of javascript_items">
-          <div class="container col-12 justify-content-center">
-            <h1 align="center">{{item}}</h1>
+        <mat-list-item *ngFor="let item of javascript_items; let first = first;" style="height: auto; margin: 5px" (click)="goToLessonDetailDetail(first)">
+          <div class="container col-12 row justify-content-center align-items-center">
+            <div class="col-1">
+              <mat-icon *ngIf="first" class="big-icon" [ngClass]="{'done': first, 'not-done': !first}">check_circle</mat-icon>
+              <mat-icon *ngIf="!first" class="big-icon" [ngClass]="{'done': first, 'not-done': !first}">remove_circle</mat-icon>
+            </div>
+            <div class="col-11" [ngClass]="{'lesson-title': first, 'lesson-title-disabled': !first}">
+              <h1 align="center">{{item}}</h1>
+            </div>
           </div>
         </mat-list-item>
       </ng-container>
       <ng-container *ngIf="type==='css'">
-        <mat-list-item *ngFor="let item of css_items">
-          <div class="container col-12 justify-content-center">
-            <h1 align="center">{{item}}</h1>
+        <mat-list-item *ngFor="let item of css_items; let first = first;" style="height: auto; margin: 5px">
+          <div class="container col-12 row justify-content-center align-items-center">
+            <div class="col-1">
+              <mat-icon *ngIf="first" class="big-icon" [ngClass]="{'done': first, 'not-done': !first}">check_circle</mat-icon>
+              <mat-icon *ngIf="!first" class="big-icon" [ngClass]="{'done': first, 'not-done': !first}">remove_circle</mat-icon>
+            </div>
+            <div class="col-11" [ngClass]="{'lesson-title': first, 'lesson-title-disabled': !first}">
+              <h1 align="center">{{item}}</h1>
+            </div>
           </div>
         </mat-list-item>
       </ng-container>
       <ng-container *ngIf="type==='html'">
-        <mat-list-item *ngFor="let item of html_items">
-          <div class="container col-12 justify-content-center">
-            <h1 align="center">{{item}}</h1>
+        <mat-list-item *ngFor="let item of html_items; let first = first;" style="height: auto; margin: 5px">
+          <div class="container col-12 row justify-content-center align-items-center">
+            <div class="col-1">
+              <mat-icon *ngIf="first" class="big-icon" [ngClass]="{'done': first, 'not-done': !first}">check_circle</mat-icon>
+              <mat-icon *ngIf="!first" class="big-icon" [ngClass]="{'done': first, 'not-done': !first}">remove_circle</mat-icon>
+            </div>
+            <div class="col-11" [ngClass]="{'lesson-title': first, 'lesson-title-disabled': !first}">
+              <h1 align="center">{{item}}</h1>
+            </div>
           </div>
         </mat-list-item>
       </ng-container>
