--- a/project/TPES/src/app/lessons/components/pages/lesson-list/lesson-list.component.html
+++ b/project/TPES/src/app/lessons/components/pages/lesson-list/lesson-list.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
-<div class="container">
-  <mat-grid-list [cols]="2" [rowHeight]="'1:1'">
+<div class="container col-md-12">
+  <mat-grid-list [cols]="4">
     <mat-grid-tile>
       <img src="/assets/JavaScript-logo.png" style="width: 100%; height: 100%">
       <mat-grid-tile-footer>
