--- a/project/TPES/src/app/accounts/components/pages/login/login.component.css
+++ b/project/TPES/src/app/accounts/components/pages/login/login.component.css
@@ -10,6 +10,17 @@
   width: 50vw;
   justify-content: center;
   align-items: center;
+
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  display: -moz-box;
+  -moz-box-orient: vertical;
+}
+
+.login-title img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .login-form-container {
