--- a/project/TPES/src/app/accounts/components/pages/login/login.component.html
+++ b/project/TPES/src/app/accounts/components/pages/login/login.component.html
@@ -1,6 +1,7 @@
 <div class="login-container">
   <div class="login-title">
-    <h1>TPES</h1>
+    <h1>TPES Login</h1>
+    <img src="/assets/TPES.png" style="width: 25%; height: 25%">
   </div>
   <div class="login-form-container">
     <app-login-form></app-login-form>
