--- a/project/TPES/src/app/base/components/elements/navbar/navbar.component.html
+++ b/project/TPES/src/app/base/components/elements/navbar/navbar.component.html
@@ -1,9 +1,11 @@
 <mat-toolbar class="navbar" [color]="'primary'">
   <span>
-    <button mat-flat-button [routerLink]="['/']">TPES</button>
+    <button mat-flat-button [routerLink]="['/lessons']">TPES</button>
   </span>
   <span>
-    <button mat-flat-button [routerLink]="['/lessons']">Lessons</button>
+    <ng-container *ngIf="isLoggedIn">
+      <button mat-button [routerLink]="['/lessons']">Lessons</button>
+    </ng-container>
   </span>
   <!-- This fills the remaining space of the current row -->
   <span class="filler"></span>
@@ -17,7 +19,7 @@
     </ng-container>
     <ng-container *ngIf="!isLoggedIn">
       <button mat-button (click)="goToLoginPage()">Login</button>
-      <button mat-button (click)="goToRegisterPage()">Register</button>
+      <!-- <button mat-button (click)="goToRegisterPage()">Register</button> -->
     </ng-container>
   </span>
 </mat-toolbar>
