--- a/project/TPES/src/app/lessons/components/pages/lesson-list/lesson-list.component.css
+++ b/project/TPES/src/app/lessons/components/pages/lesson-list/lesson-list.component.css
@@ -22,6 +22,7 @@ mat-grid-tile button {
   width: 90%;
   border-radius: 12px;
   box-shadow: 5px 5px #888888;
+  padding-right: 15px;
 }
 
 mat-grid-tile button:focus {
