Minor text fixes

--- a/project/TPES/src/app/lessons/components/pages/lesson-detail-detail/lesson-detail-detail.component.html
+++ b/project/TPES/src/app/lessons/components/pages/lesson-detail-detail/lesson-detail-detail.component.html
@@ -19,7 +19,7 @@
         <p>To create a variable in Javascript, you will need to "declare" the variable.</p>
         <code>var x = 0;</code>
         <p>
-          There are also other ariables that you can declare other than numbers. To declare a list of objects, use
+          There are also other variables that you can declare other than numbers. To declare a list of objects, use
           an array object.
         </p>
         <code>var myList = [];</code>
@@ -27,7 +27,7 @@
           You can also statically declare strings in javascript. You do it like this.
         </p>
         <code>var myString = "Hello, world!";</code>
-        <p>And remembers, <b>ALL</b> Javscript code statements end in a semicolon!</p>
+        <p>And remember, <b>ALL</b> Javscript code statements end in a semicolon!</p>
       </mat-card-content>
     </mat-card>
   </div>
