--- a/project/TPES/src/app/lessons/components/pages/lesson-detail/lesson-detail.component.html
+++ b/project/TPES/src/app/lessons/components/pages/lesson-detail/lesson-detail.component.html
@@ -28,7 +28,7 @@
         </mat-list-item>
       </ng-container>
       <ng-container *ngIf="type==='css'">
-        <mat-list-item *ngFor="let item of css_items; let first = first;" style="height: auto; margin: 5px">
+        <mat-list-item *ngFor="let item of css_items; let first = first;" style="height: auto; margin: 5px" (click)="goToLessonDetailDetail(first)">
           <div class="container col-12 row justify-content-center align-items-center">
             <div class="col-1">
               <mat-icon *ngIf="first" class="big-icon" [ngClass]="{'done': first, 'not-done': !first}">check_circle</mat-icon>
@@ -41,7 +41,7 @@
         </mat-list-item>
       </ng-container>
       <ng-container *ngIf="type==='html'">
-        <mat-list-item *ngFor="let item of html_items; let first = first;" style="height: auto; margin: 5px">
+        <mat-list-item *ngFor="let item of html_items; let first = first;" style="height: auto; margin: 5px" (click)="goToLessonDetailDetail(first)">
           <div class="container col-12 row justify-content-center align-items-center">
             <div class="col-1">
               <mat-icon *ngIf="first" class="big-icon" [ngClass]="{'done': first, 'not-done': !first}">check_circle</mat-icon>
