--- a/project/TPES/src/app/accounts/components/pages/teacher-view/teacher-view.component.html
+++ b/project/TPES/src/app/accounts/components/pages/teacher-view/teacher-view.component.html
@@ -1,2 +1,34 @@
 <app-navbar></app-navbar>
 
+<div class="container col-12">
+  <h1 align="center">Pick a class to grade</h1>
+</div>
+<div class="container col-md-12">
+  <mat-grid-list [cols]="2" rowHeight="350" gutterSize="50">
+    <mat-grid-tile>
+      <button [routerLink]="['javascript']">
+        <img class="tileImg" src="/assets/JavaScript-logo.png">
+        <h2 style="margin-left: 10px; text-align: right">Bring your website to life with Javascript</h2>
+      </button>
+    </mat-grid-tile>
+    <mat-grid-tile>
+      <button [routerLink]="['html']">
+        <img class="tileImg" src="/assets/HTML-logo.png">
+        <h2 style="margin-left: 10px; text-align: right">Create the structure of your website with HTML</h2>
+      </button>
+    </mat-grid-tile>
+    <mat-grid-tile style="margin-top: -75px">
+      <button [routerLink]="['css']">
+        <img id="css" class="tileImg" src="/assets/CSS3-logo.png">
+        <h2 style="margin-left: 10px; text-align: right">Style your website with CSS</h2>
+      </button>
+    </mat-grid-tile>
+    <mat-grid-tile style="margin-top: -75px">
+      <button [routerLink]="['website']">
+        <img id="website" class="tileImg" src="/assets/html_css_js.png">
+        <div matTooltip="You must complete the other courses first!"></div>
+        <h2 style="margin-left: 10px; text-align: right">Build your own website</h2>
+      </button>
+    </mat-grid-tile>
+  </mat-grid-list>
+</div>
