--- a/project/TPES/src/app/accounts/components/pages/login/login.component.html
+++ b/project/TPES/src/app/accounts/components/pages/login/login.component.html
@@ -1,9 +1,11 @@
-<div class="login-container">
-  <div class="login-title">
-    <h2>TPES Login</h2>
-    <img src="/assets/TPES.png" style="width: 25%; height: 25%">
-  </div>
-  <div class="login-form-container">
-    <app-login-form></app-login-form>
+<div class="background">
+  <div class="login-container">
+    <div class="login-title">
+      <h1>TPES Login</h1>
+      <img src="/assets/TPES.png" style="width: 30%; height: 30%">
+    </div>
+    <div class="login-form-container">
+      <app-login-form></app-login-form>
+    </div>
   </div>
 </div>
