--- a/project/TPES/src/app/lessons/components/pages/lesson-detail/lesson-detail.component.html
+++ b/project/TPES/src/app/lessons/components/pages/lesson-detail/lesson-detail.component.html
@@ -3,13 +3,13 @@
 <div class="container justify-content-center">
   <div class="col-12">
     <ng-container *ngIf="type==='javascript'">
-      <h1 align="center">Lesson : Javascript</h1>
+      <h1 align="center">Select Your Javascript Topic</h1>
     </ng-container>
     <ng-container *ngIf="type==='css'">
-      <h1 align="center">Lesson : CSS 3</h1>
+      <h1 align="center">Select Your CSS Topic</h1>
     </ng-container>
     <ng-container *ngIf="type==='html'">
-      <h1 align="center">Lesson : HTML</h1>
+      <h1 align="center">Select Your HTML Topic</h1>
     </ng-container>
   </div>
   <div class="col-12">
