--- a/project/TPES/src/app/lessons/components/pages/lesson-list/lesson-list.component.css
+++ b/project/TPES/src/app/lessons/components/pages/lesson-list/lesson-list.component.css
@@ -4,12 +4,12 @@ button.mat-raised-button {
 
 .tileImg {
   height: 60%;
-  width: 35%;
+  width: 27%;
   float: left;
 }
 
 #css {
-  width: 25%;
+  width: 20%;
   margin-left: 15px;
 }
 
@@ -22,7 +22,7 @@ mat-grid-tile button {
   width: 90%;
   border-radius: 12px;
   box-shadow: 5px 5px #888888;
-  padding-right: 15px;
+  padding: 20px;
 }
 
 mat-grid-tile button:focus {
@@ -36,4 +36,10 @@ mat-grid-tile button:hover {
 mat-grid-tile button:active {
   box-shadow: 3px 3px #696969;
   transform: translateY(4px);
+}
+
+mat-grid-tile button:disabled {
+  background-color: #D3D3D3;
+  transform: none;
+  box-shadow: none;
 }
