--- a/src/app/accounts/components/pages/teacher-view/teacher-view.component.html
+++ b/src/app/accounts/components/pages/teacher-view/teacher-view.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 
 <div class="container col-12">
-  <h1 align="center">View A Class</h1>
+  <h1 align="center">View a Class</h1>
 </div>
 <div class="container col-md-12">
   <mat-grid-list [cols]="2" rowHeight="350" gutterSize="50">
