--- a/src/app/lessons/components/pages/lesson-detail-detail/lesson-detail-detail.component.html
+++ b/src/app/lessons/components/pages/lesson-detail-detail/lesson-detail-detail.component.html
@@ -4,7 +4,7 @@
   <h1 align="center" *ngIf="class === 'css'">Lesson 1: CSS Attributes</h1>
   <h1 align="center" *ngIf="class === 'html'">Lesson 1: HTML Tags</h1>
 </div>
-<div class="row col-12 align-items-center justify-content-center" style="margin-top: 10px; height: 60vh">
+<div class="row col-12" style="margin-top: 50px; height: 60vh">
   <div class="container col-6 align-items-center justify-content-center">
     <mat-card>
       <mat-card-header>
@@ -68,7 +68,7 @@
             <form [formGroup]="form" style="width: 75%">
               <mat-form-field style="width: 100%">
                 <input matInput [placeholder]="'Your code'" [formControlName]="'userCode'" autocomplete="off">
-                <mat-hint align="start" *ngIf="hintUsed"><strong>Start with 'var', and always end with a semi-colon</strong></mat-hint>
+                <!-- <mat-hint align="start" *ngIf="hintUsed"><strong>Start with 'var', and always end with a semi-colon</strong></mat-hint> -->
                 <mat-error *ngIf="userCode.hasError('required')">
                   You must type some code
                 </mat-error>
@@ -96,6 +96,16 @@
         <ng-container *ngIf="class === 'html'">
 
         </ng-container>
+      </mat-card-content>
+    </mat-card>
+    <mat-card *ngIf="hintUsed" style="margin-top: 34px;">
+      <mat-card-header>
+        <mat-card-title>
+          <h3>Hint</h3>
+        </mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+          <p>Start with 'var', and always end with a semi-colon</p>
       </mat-card-content>
     </mat-card>
   </div>
