changing dashboard to classes

--- a/src/app/base/components/elements/navbar/navbar.component.html
+++ b/src/app/base/components/elements/navbar/navbar.component.html
@@ -8,7 +8,7 @@
       </ng-container>
   </span>
   <span *ngIf="isStaff">
-    <button mat-flat-button [routerLink]="['/teacher-console']">Dashboard</button>
+    <button mat-flat-button [routerLink]="['/teacher-console']">Classes</button>
   </span>
   <span>
     <ng-container *ngIf="isLoggedIn && !isStaff">
